<resources>
    <string name="app_name">GTalk</string>

    <string name="title_activity_activity_support">ActivitySupport</string>
    <string name="login_title">登录</string>
    <string name="save_checkbox">保存账户</string>
    <string name="login_btn">登录</string>
    <string name="register_btn">注册</string>
    <string name="reset_btn">重置</string>
    <string name="loginName">账户</string>
    <string name="password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="hide_login">隐身登录</string>
    <string name="auto_login">自动登录</string>
    <string name="name">姓名:</string>
    <string name="depart">部门:</string>
    <string name="mobile">手机号:</string>
    <string name="phone">固定电话:</string>
    <string name="email">邮箱:</string>
    <string name="menu_contacts_add">添加联系人</string>
    <string name="menu_contacts_group_add">添加联系人分组</string>
    <string name="menu_contacts_group_rename">重命名联系人分组</string>
    <string name="menu_contacts_group_move">移动联系人分组</string>
    <string name="add">添加</string>
    <string name="save">保存</string>
    <string name="group">分组</string>
    <string name="group_name">分组名称</string>
    <string name="company_name">公司名称</string>
    <string name="position">职位</string>
    <string name="remark">备注</string>
    <string name="move_to">移动到</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="pcontacts_info">联系人信息</string>
    <string name="my_folder">个人文件夹</string>
    <string name="menu_contacts_modify">联系人修改</string>
    <!-- 登录提示 -->
    <string name="message_invalid_username_password">错误的用户名或密码</string>
    <string name="message_server_unavailable">无法连接到服务器</string>
    <string name="message_user_disabled">用户被禁用</string>
    <string name="message_user_expired">账户已过期</string>
    <string name="message_userip_no_access">IP不合法,已被禁用</string>
    <string name="unrecoverable_error">发生未知异常,连接失败</string>
    <!-- 网络和内存卡提示 -->
    <string name="prompt">提示</string>
    <string name="check_connection">无可用网络连接，请检查网络设置！</string>
    <string name="check_sdcard">请检查内存卡！</string>
    <string name="menu_settings">设置</string>
    <string name="close">关闭</string>
    <string name="exit">退出</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <!-- 聊天记录 -->
    <string name="failedconnection">网络连接不可用，请检查网络设置</string>
    <string name="chat_exprot">导出</string>
    <string name="chat_delete">删除</string>
    <string name="chat_clear">清空</string>
    <string name="chat_check_history">查看聊天记录</string>
    <string name="chat_his_with_sb">与%1$s的聊天记录</string>
    <!-- 我的消息 -->
    <string name="check_sys_msg">查看系统消息</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="delete_user_confim">删除用户会将该用户所有聊天记录一并删除，是否继续?</string>
    <string name="new_message">收到新短消息</string>
    <!-- 添加好友 -->
    <string name="input_username">输入用户名</string>
    <string name="set_nickname">设置昵称</string>
    <string name="username_not_null">用户名不允许为空</string>
    <string name="username_exist">好友已存在</string>
    <!-- 系统消息列表 -->
    <string name="at_the_last">已经到达最后一页</string>

    <!-- 缺省的服务器配置 -->
    <integer name="xmpp_port">5222</integer>
    <string name="xmpp_host">192.168.1.101</string>
    <string name="xmpp_service_name">wangxc</string>

    <bool name="is_remember">true</bool>
    <bool name="is_autologin">false</bool>
    <bool name="is_novisible">false</bool>

    <!-- 数据库和文件路径 -->
    <string name="dir">/Xim</string>
    <string name="app_dir">/app</string>
    <string name="db_dir">/database</string>
    <string name="img_dir">/img</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_friends">添加好友</string>
    <string name="update_stutas">更新状态</string>
    <string name="new_login">重新登录</string>
    <string name="exit_login">退出</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="friend_info">好友信息</string>

</resources>
