<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp">

    <RelativeLayout
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip">

        <EditText
            android:id="@+id/ui_username_input"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginTop="5.0dip"
            android:background="@anim/edit_text"
            android:hint="@string/loginName"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="#ff333333"
            android:textColorHint="@color/darkgray"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="15dip">

        <EditText
            android:id="@+id/ui_password_input"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginTop="5.0dip"
            android:background="@anim/edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/darkgray"
            android:textSize="18.0sp" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dip"
        android:button="@drawable/btn_check"
        android:checked="false"
        android:text="@string/remember_password"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/autologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/remember"
        android:layout_below="@+id/remember"
        android:button="@drawable/btn_check"
        android:text="@string/auto_login"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/novisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/remember"
        android:layout_below="@+id/autologin"
        android:button="@drawable/btn_check"
        android:text="@string/hide_login"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ui_register_btn"
        android:layout_width="100dip"
        android:layout_height="45dip"
        android:layout_alignLeft="@+id/novisible"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
        android:background="@drawable/button"
        android:text="@string/register_btn"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ui_login_btn"
        android:layout_width="100dip"
        android:layout_height="45dip"
        android:layout_alignBaseline="@+id/ui_register_btn"
        android:layout_alignBottom="@+id/ui_register_btn"
        android:layout_alignRight="@+id/password"
        android:background="@drawable/button"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ui_login_btn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="118dp" />
</RelativeLayout>
