<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/asd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_register">


    <RelativeLayout
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="80dp">

        <EditText
            android:id="@+id/ui_username_input"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginTop="5.0dip"
            android:background="@anim/edit_text"
            android:hint="@string/loginName"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="#ff333333"
            android:textColorHint="@color/darkgray"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="15dip">

        <EditText
            android:id="@+id/ui_password_input"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginTop="5.0dip"
            android:background="@anim/edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/darkgray"
            android:textSize="18.0sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/ui_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/password"
        android:background="@drawable/button"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/register_btn" />


</RelativeLayout>